--- a/agropilotas_test.html
+++ b/agropilotas_test.html
@@ -420,7 +420,7 @@
         canvas {
             background: #1b7a33
         }
-
+        
         /* Hide the old toolbar implement button */
         .controls #btnImpl {
             display: none !important;
@@ -728,7 +728,7 @@
        </path>
       </svg>
       <span class="label">
-       Kryptis
+       bybys
       </span>
       <span class="val" id="hdgTxt">
        0°
