--- a/agropilotas_test.html
+++ b/agropilotas_test.html
@@ -728,7 +728,7 @@
        </path>
       </svg>
       <span class="label">
-       bybys
+       Kryptis
       </span>
       <span class="val" id="hdgTxt">
        0°
