--- a/agropilotas_test.html
+++ b/agropilotas_test.html
@@ -844,7 +844,7 @@
        </path>
       </svg>
       <span class="label">
-       Kryptis
+       Krypti
       </span>
       <span class="val" id="hdgTxt">
        0°
